--- a/Expressions_and_Operations.ipynb
+++ b/Expressions_and_Operations.ipynb
@@ -6,7 +6,7 @@
       "name": "Expressions and Operations.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/GJXp9T2d2798t4QJ/j28",
+      "authorship_tag": "ABX9TyP6SdnEknSkWN01NwiNA8P1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QfexNL-Thovb",
-        "outputId": "c856d9df-0265-4fc1-b316-c754c72aca61"
+        "outputId": "2625aeb9-40ce-4bf4-d1f0-8f37e0807721"
       },
       "source": [
         "def myFunction(): \n",
@@ -147,13 +147,13 @@
         "  print(\"No!\")\n",
         "\n",
         "def myFunction1():\n",
-        "  return True\n",
+        "  return False\n",
         "if myFunction1():\n",
         "  print(\"Yes!\")\n",
         "else:\n",
         "  print(\"No!\")"
       ],
-      "execution_count": 28,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
             "True\n",
             "False\n",
             "Yes!\n",
-            "Yes!\n"
+            "No!\n"
           ]
         }
       ]
