--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -90,7 +90,9 @@
         "\n",
         "while sum==0:\n",
         "  sum=num1+num5\n",
-        "  print(\"The sum of first and last number is\", + sum)"
+        "  print(\"The sum of first and last number is\", + sum)",
+        "  if sum==0:\n",
+        "    break
       ],
       "metadata": {
         "colab": {
